Fix the colors of the checkbox/radio button icon for MD mode.

Bug: 757679, 757649
Change-Id: I554d74b41a5b9baeaec4eaf6504ea7f97003b8e5