ui/native_theme/native_theme_win.cc
@@ -457,8 +457,12 @@ SkColor NativeThemeWin::GetSystemColor(ColorId color_id) const {
 
     // FocusableBorder
     case kColorId_FocusedBorderColor:
+      if (ui::MaterialDesignController::IsSecondaryUiMaterial())
+        break;
       return kFocusedBorderColor;
     case kColorId_UnfocusedBorderColor:
+      if (ui::MaterialDesignController::IsSecondaryUiMaterial())
+        break;
       return kUnfocusedBorderColor;
 
     // Button
